--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
@@ -152,12 +152,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="frameScrollPane" min="-2" pref="1319" max="-2" attributes="0"/>
+          <Component id="frameScrollPane" min="-2" pref="1351" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="frameScrollPane" alignment="0" pref="858" max="32767" attributes="0"/>
+          <Component id="frameScrollPane" alignment="0" pref="949" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -198,7 +198,7 @@
                           <Group type="102" attributes="0">
                               <Component id="sequenceSetupBasePanel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="HCAsequenceProgressBar" min="-2" pref="225" max="-2" attributes="0"/>
+                              <Component id="HCAsequenceProgressBar" min="-2" pref="247" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="statusLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
@@ -271,15 +271,15 @@
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="seqOrderBasePanel" min="-2" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                              <Component id="snapFLIMButton" max="32767" attributes="0"/>
+                                              <Component id="snapBFButton" max="32767" attributes="0"/>
+                                          </Group>
                                           <Group type="102" attributes="0">
-                                              <EmptySpace min="207" pref="207" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="snapFLIMButton" alignment="0" min="-2" pref="139" max="-2" attributes="0"/>
-                                                  <Component id="snapBFButton" alignment="1" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="startSequenceButton" alignment="1" min="-2" pref="139" max="-2" attributes="0"/>
-                                              </Group>
+                                              <Component id="seqOrderBasePanel" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="startSequenceButton" min="-2" pref="158" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Group type="103" groupAlignment="0" attributes="0">
@@ -329,7 +329,7 @@
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="progressBarPanel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="128" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -412,7 +412,7 @@
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <EmptySpace min="0" pref="47" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="64" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                   </Layout>
