sequencing meta data save for debugging

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
@@ -216,8 +216,8 @@
                 <Component class="com.github.dougkelly88.FLIMPlateReaderGUI.LightPathClasses.GUIComponents.LightPathPanel" name="lightPathControls1">
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                      <JTabbedPaneConstraints tabName="Light Path Control">
-                        <Property name="tabTitle" type="java.lang.String" value="Light Path Control"/>
+                      <JTabbedPaneConstraints tabName="Light path control">
+                        <Property name="tabTitle" type="java.lang.String" value="Light path control"/>
                       </JTabbedPaneConstraints>
                     </Constraint>
                   </Constraints>
